# TwitchChatTerminal

./: .gitignore  CMakeLists.txt  README.md
src/: ColorSystem.cpp  ColorSystem.h  Command.h  CommandRegistry.cpp  CommandRegistry.h  ConfigManager.h  ConsoleInput.cpp  ConsoleInput.h  JsonSettings.cpp  JsonSettings.h  MessageParser.cpp  MessageParser.h  TwitchChat.cpp  TwitchChat.h  main.cpp
